summative.moria.Moria.scala.error
Compilation error:
Moria:1: error: Missing closing brace `}' assumed here
while(!(estFaceMur())){avance()}
^